--- a/templates/hw/task0.html
+++ b/templates/hw/task0.html
@@ -85,7 +85,7 @@
         <li><code>checkSign</code>
             <ul>
                 <li>
-                    This method takes a single integer as a parameter and returns a String representing the numeric sign
+                    This method takes a single int as a parameter and returns a String representing the numeric sign
                     of the input
                 </li>
                 <li>
@@ -166,7 +166,7 @@
         <li><code>firstNInts</code>
             <ul>
                 <li>
-                    This method takes a single integer n as an argument and returns an ArrayList of integers
+                    This method takes a single int n as an argument and returns an ArrayList of Integers
                     representing the first n natural numbers, starting with 1
                 </li>
                 <li>
@@ -187,7 +187,27 @@
             </ul>
         </li>
 
-        <li><code>sumOfDigits</code>
+
+        <li class="h"><code>farts</code>
+            <ul>
+                <li>
+                    The farts method will take an int and return that int
+                </li>
+                <li>
+                    The sign of a number is ignored, i.e. -5 is treated the same as 5
+                </li>
+                <li>
+                    Examples:
+                    <ul>
+                        <li>farts(123) returns 123</li>
+                        <li>farts(57) returns 57</li>
+                        <li>farts(-36) returns -36</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+
+        <li value="6"><code>sumOfDigits</code>
             <ul>
                 <li>
                     The sumOfDigits method will take an int as a parameter and returns the sum of the digits of the
