--- a/templates/cse116/syllabus.html
+++ b/templates/cse116/syllabus.html
@@ -543,6 +543,14 @@
         </ul>
 
         <p>
+            Any student may be challenged by the course staff to explain their code. If they can not explain their code in
+            a way that convinces the course staff that they were the author of all the code they submitted for course
+            credit, they will be found in violation of this academic integrity policy. Please note that if you are in
+            violation of any other part of this policy, it is still a violation even if you can explain your code
+            (eg. If you did write the code, but helped someone else cheat)
+        </p>
+
+        <p>
             If you plan on cheating, plan on taking this course again.
         </p>
 
