Mentioned commented test methods for task 0

--- a/templates/hw/task0.html
+++ b/templates/hw/task0.html
@@ -60,6 +60,10 @@
         will see feedback about which test cases you've passed/failed. Once you pass all test cases, you're ready to
         submit to Autolab.
     </p>
+    <p>
+        Some of these tests have been commented out so that the project will compile. You can uncomment the tests as you
+        get to these methods. You can highlight multiple lines and press control+/ (command+/ on mac) to quickly comment multiple lines in/out
+    </p>
 
     <br />
     <hr />
@@ -261,10 +265,10 @@
                 <li>
                     If the input is an empty ArrayList, the output should be an empty HashMap
                 </li>
-{#                <li>#}
-{#                    Do not worry about the case where there are multiple of the same value in the input; this is#}
-{#                    considered undefined behavior and will not be tested#}
-{#                </li>#}
+                {# <li>#}
+                    {# Do not worry about the case where there are multiple of the same value in the input; this is#}
+                    {# considered undefined behavior and will not be tested#}
+                    {# </li>#}
                 <li>
                     Examples:
                     <ul>
