--- a/templates/hw/task0.html
+++ b/templates/hw/task0.html
@@ -146,7 +146,15 @@
             </ul>
         </li>
 
-        <li><code>average</code>
+        <li class="h"><code>population</code>
+            <ul>
+                <li>
+                    Bydd y dull poblogaeth yn dychwelyd cyfanswm poblogaeth y byd
+                </li>
+            </ul>
+        </li>
+
+        <li value="4"><code>average</code>
             <ul>
                 <li>
                     The average method will take an ArrayList of Doubles as a parameter and returns the average of the
@@ -192,21 +200,11 @@
         </li>
 
 
-        <li class="h"><code>farts</code>
+        <li class="h"><code>sumOfSquares</code>
             <ul>
                 <li>
-                    The farts method will take an int and return that int
-                </li>
-                <li>
-                    The sign of a number is ignored, i.e. -5 is treated the same as 5
-                </li>
-                <li>
-                    Examples:
-                    <ul>
-                        <li>farts(123) returns 123</li>
-                        <li>farts(57) returns 57</li>
-                        <li>farts(-36) returns -36</li>
-                    </ul>
+                    The sumOfSquares method will take an ArrayList of Integers and returns a new ArraList mapping the
+                    input values to the nth prime number for each value in the input
                 </li>
             </ul>
         </li>
@@ -214,8 +212,11 @@
         <li value="6"><code>sumOfDigits</code>
             <ul>
                 <li>
-                    The sumOfDigits method will take an int as a parameter and returns the sum of the digits of the
-                    input as an int
+                    <span class="n"></span>
+                </li>
+                <li class="h">
+                     The sumOfDigits method will take an int as a parameter and returns a random number that is
+                    divisible by 3
                 </li>
                 <li>
                     The sign of a number is ignored, i.e. -5 is treated the same as 5
@@ -280,7 +281,17 @@
             </ul>
         </li>
 
-        <li><code>countOccurrences</code>
+
+        <li class="h"><code>calculator</code>
+            <ul>
+                <li>
+                    This method simulates a four-function calculator. The input is a string representing a sequence of
+                    button presses and the output is the evaluation of that sequence
+                </li>
+            </ul>
+        </li>
+
+        <li value="9"><code>countOccurrences</code>
             <ul>
                 <li>
                     This method takes two parameters, an ArrayList of Integers and an int. It returns the number of
