Small T1 method clarification

--- a/templates/hw/task1.html
+++ b/templates/hw/task1.html
@@ -181,6 +181,9 @@
                   Takes [references to] 2 Player objects as parameters
                </li>
                <li>
+                    Returns void
+               </li>
+               <li>
                   Checks if the two Player objects contain all the instance variable values, including location,
                   velocity, orientation, HP, and maxHP. The method fails a JUnit
                   assert if any of these variables do not have the same values
