--- a/templates/hw/task1.html
+++ b/templates/hw/task1.html
@@ -217,9 +217,9 @@
                     </li>
                 </ul>
             </li>
-            <li><code>PhysicsEngine</code> revisited
+            <li><code>PhysicsEngine</code> - <code>detectCollision</code>
                 <ul>
-                    <li>Implement a method called <code>detectCollision</code> that takes in two Hitboxes and returns a
+                    <li>Complete the <code>detectCollision</code> method that takes in two Hitboxes and returns a
                         boolean. The boolean
                         should return true if the two Hitboxes are colliding (ie. overlapping) and false otherwise. Two
                         hitboxes are overlapping if any portion of the boxes overlap
@@ -237,52 +237,15 @@
                                 that you sketch out hitboxes and their location/dimension vectors and write test cases
                                 for a variety of situations before diving deep into the code
                             </li>
-                        </ul>
-
-                    </li>
-                    <li>
-                        Complete the method called <code>updateLevel</code> that takes in a Level and a double
-                        representing
-                        the change in time. This method should update all <code>DynamicGameObjects</code> contained
-                        within the level and
-                        process all collisions in the level. The provided code updates all
-                        <code>DynamicGameObjects</code> by calling
-                        your <code>updateObject</code> method on all of them. You must now add calls to your <code>detectCollision</code>
-                        in a similar way.
-                        <ul>
-                            <li>The <code>Level</code> class contains the methods
-                                <code>getDynamicObjects</code> and <code>getStaticObjects</code> which return
-                                <code>ArrayLists</code> containing all the respective objects in the level which will be
-                                useful for this method. <code>StaticGameObjects</code> are similar to their dynamic
-                                counterparts, except they can't move and so are handled separately by the game engine
-                            </li>
                             <li>
-                                You can get the hitbox for either static or dynamic objects by calling their
-                                <code>getHitbox</code> method
-                            </li>
-                            <li>Collisions can be between <code>StaticGameObjects</code> and
-                                <code>DynamicGameObjects</code>
-                                or between two <code>DynamicGameObjects</code>. If a collision is detected,
-                                it should call the respective <code>collideWithStaticObject</code> or <code>collideWithDynamicObject</code>
-                                methods on both objects involved in the collision (eg. If you detect a collision between
-                                a static object and a dynamic object, call <code>collideWithDynamicObject</code> on the
-                                static object with the dynamic object as an argument and
-                                <code>collideWithStaticObject</code>
-                                on the dynamic object with the static object as an argument. This lets both objects know
-                                that
-                                they have to handle the collision)
-                            </li>
-                            <li>Be sure to call your <code>detectCollision</code> method when completing this method. Don't
-                                redo your work
-                            </li>
-                            <li>
-                                After implementing these methods, collisions will be registered when you play the game.
+                                After implementing this method, collisions will be registered when you play the game.
                                 When you walk into an enemy, you will be sent back to the starting location of the level
                                 and when you reach the goal you'll advance to the next level. You can even shoot the
                                 enemies using the space bar to fire.. however, you can still walk through walls. Let's
                                 fix that
                             </li>
                         </ul>
+
                     </li>
                 </ul>
             </li>
