correct location of Wall in task 1

--- a/templates/hw/task1.html
+++ b/templates/hw/task1.html
@@ -43,7 +43,7 @@
         <ul>
             <li><code>DynamicGameObject</code>, located in the package <code>app.gameengine.model.gameobjects</code>
             </li>
-            <li><code>Wall</code>, located in the package <code>app.games.topdown</code></li>
+            <li><code>Wall</code>, located in the package <code>app.games.commonobjects</code></li>
             <li><code>PhysicsEngine</code>, located in the package <code>app.gameengine.model.physics</code></li>
             <li><code>TestTask1</code>, located in the package <code>app.tests</code></li>
         </ul>
@@ -80,7 +80,8 @@
         <img src="/static_files/images/game1.png" class="img-fluid" alt="Game image from starter code">
 
         <p>
-            As you can see, it's basically a marvel of modern graphics. 
+            As you can see, it's basically a marvel of modern graphics. You probably thought this was photograph of cosplayers at a
+            medieval festival, but it's actually in game graphics from this project.
         </p>
 
         <p>
